force-app/main/default/objects/Project_Resource_Assignment__c/Project_Resource_Assignment__c.object-meta.xml
<CustomObject>
    <label>Project Resource Assignment</label>
    <nameField>
        <displayFormat>PRA-{00000000}</displayFormat>
        <label>Project Resource Assignment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Project Resource Assignments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>