force-app/main/default/objects/Project_Resource_Assignment__c/fields/Assignment_Status__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Status__c</fullName>
    <label>Assignment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Confirmed</fullName>
            </value>
            <value>
                <fullName>Not Confirmed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>