force-app/main/default/objects/Project_Resource_Assignment__c/fields/Calculated_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Calculated_End_Date__c</fullName>
    <formula>Start_Date__c + 6</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated End Date</label>
    <type>Date</type>
</CustomField>