force-app/main/default/objects/Project_Resource_Assignment__c/fields/Hours_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Hours_Per_Day__c</fullName>
    <label>Hours Per Day</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>