force-app/main/default/objects/Project_Resource_Assignment__c/fields/Hours_Thursday__c.field-meta.xml
<CustomField>
    <fullName>Hours_Thursday__c</fullName>
    <label>Hours Thursday</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>