force-app/main/default/objects/Project_Resource_Assignment__c/fields/Hours_Total__c.field-meta.xml
<CustomField>
    <fullName>Hours_Total__c</fullName>
    <formula>Hours_Monday__c + Hours_Tuesday__c + Hours_Wednesday__c + Hours_Thursday__c + Hours_Friday__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Hours Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>