force-app/main/default/objects/Project_Resource_Assignment__c/fields/Project_Team_Member__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Project Team Member</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Project Team Member does not belong to Project</errorMessage>
        <filterItems>
            <field>$Source.Project__c</field>
            <operation>equals</operation>
            <valueField>Project_Team_Member__c.Project__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Project_Team_Member__c</referenceTo>
    <relationshipLabel>Project Resource Assignments</relationshipLabel>
    <relationshipName>Project_Resource_Assignments</relationshipName>
    <type>Lookup</type>
</CustomField>