force-app/main/default/objects/Project_Resource_Assignment__c/fields/Project_Team_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Team_Member_Name__c</fullName>
    <formula>Project_Team_Member__r.User__r.FirstName + &apos; &apos; +  Project_Team_Member__r.User__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Team Member Name</label>
    <type>Text</type>
</CustomField>