force-app/main/default/objects/Project_Resource_Assignment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Project__c</columns>
    <columns>User__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Calculated_End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>