force-app/main/default/objects/Project_Resource_Assignment__c/listViews/David_s_List.listView-meta.xml
<ListView>
    <fullName>David_s_List</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Hours_Monday__c</columns>
    <columns>Hours_Tuesday__c</columns>
    <columns>Hours_Wednesday__c</columns>
    <columns>Hours_Thursday__c</columns>
    <columns>Hours_Friday__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <filters>
        <field>User__c</field>
        <operation>startsWith</operation>
        <value>Will</value>
    </filters>
    <label>Individual List View</label>
</ListView>