force-app/main/default/objects/Project_Resource_Assignment__c/listViews/Recent_Updates.listView-meta.xml
<ListView>
    <fullName>Recent_Updates</fullName>
    <columns>NAME</columns>
    <columns>User__c</columns>
    <columns>Project__c</columns>
    <columns>Start_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Start_Date__c</field>
        <operation>greaterThan</operation>
        <value>10/1/2024</value>
    </filters>
    <label>Recent Updates</label>
</ListView>